squash merge of problem commits
Signed-off-by: garyschulte <garyschulte@gmail.com>